# llm_scratch

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  data.py  main.py  model.py  pyproject.toml  requirements.txt  train.py
