[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_from_scratch"
version = "0.1.0"
description = "A minimal LLaMA-like LLM implementation from scratch"
authors = [
    { name="Sarath Rahul Malla", email="test_mail@email.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "pandas",
    "matplotlib"
]
requires-python = ">=3.8"
